api/kubernetes-manifests/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapi
  template:
    metadata:
      labels:
        app: myapi
    spec:
      serviceAccountName: control-inference
      containers:
      - name: spring-api
        image: dlatqdlatq/poc-api:v2-test
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        ports:
        - containerPort: 8080
