api/kubernetes-manifests/build.pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: build
        image: ubuntu:20.04
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
        volumeMounts:
          - mountPath: /var/run/docker.sock
            name: docker-socket-volume
          - mountPath: /models
            name: models
      volumes:
        - name: docker-socket-volume
          hostPath:
            path: /var/run/docker.sock
        - name: models
          hostPath:
            path: /Users/imseongbin/Desktop/workspace/so1s/so1s-poc-nemne/api/docker-dockerfiles/bentoml
