api/kubernetes-manifests/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: myapi
  ports:
  - port: 8080
    targetPort: 80
  type: NodePort
